# Password-Manager-by-ChatGPT

./: .gitignore  .npmrc  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
Instructions/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  SPEC 1.md  SPEC 2.md  SPEC 3.md  UI-I18N.md  UI-VAULT-CONTROLS.md  UI-VAULT-DIALOGS.md  errors.md  superspec.md
about/: buttons.md  migrations.rs.md
instructions/: 1.md  1.patch  errors.md  huy.md  wtf.md
scripts/: check-no-inline-svg.mjs  check-no-zxing-imports.mjs  check-theme-colors.mjs  security-audit.mjs
src/: App.tsx  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-default.toml
src-tauri/src/: app_state.rs  error.rs  main.rs  types.rs
src-tauri/src/commands/: attachments.rs  backup.rs  bank_cards.rs  clipboard.rs  datacards.rs  folders.rs  mod.rs  password_history.rs  profiles.rs  security.rs  settings.rs  ui_prefs.rs  vaults.rs  workspace.rs
src-tauri/src/data/: storage_paths.rs
src-tauri/src/data/crypto/: cipher.rs  dpapi.rs  kdf.rs  key_check.rs  master_key.rs
src-tauri/src/data/fs/: atomic_write.rs
src-tauri/src/data/profiles/: paths.rs  registry.rs
src-tauri/src/data/settings/: config.rs
src-tauri/src/data/sqlite/: diagnostics.rs  init.rs  migrations.rs  pool.rs  repo_impl.rs  schema.sql
src-tauri/src/data/workspaces/: registry.rs
src-tauri/src/ipc/: registry.rs  server.rs
src-tauri/src/services/: attachments_service.rs  backup_service.rs  bank_cards_service.rs  clipboard_service.rs  datacards_service.rs  folders_service.rs  password_history_service.rs  profiles_service.rs  security_service.rs  settings_service.rs  ui_prefs_service.rs  vaults_service.rs
src/app/: App.tsx  main.tsx
src/components/: ConfirmDialog.tsx  Toaster.tsx
src/components/icons/: EyeIcons.tsx  GenerateIcon.tsx
src/components/lucide/: icons.ts
src/components/ui/: dialog.tsx
src/features/LogIn/: LogIn.tsx  useLogIn.ts
src/lib/: i18n.ts  tauri.ts
src/styles/: app.css  base.css  ui.css
tools/portable/: PasswordManagerPortable.nsi
(+127 files in other folders)
