[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
argon2 = "0.5"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
once_cell = "1.19"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
