[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-log = "2.0.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4"] }
argon2 = "0.5"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "serialize", "backup"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
once_cell = "1.19"
log = "0.4"
zip = { version = "0.6", default-features = false }
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"
tempfile = "3.10"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_DataExchange",
  "Win32_UI_WindowsAndMessaging"
] }

mime_guess = "2.0"

chacha20poly1305 = "0.10.1"
zeroize = "1.8"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
